; ModuleID = '/home/carl/AnghaBench/radare2/shlr/java/extr_code.c_handle_switch_op.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/java/extr_code.c_handle_switch_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@SWITCH_OP = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [21 x i8] c"case %d: goto 0x%04x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i8*, i32)* @handle_switch_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_switch_op(i32 %0, i32* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 4, i32* %9, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = call i64 @UINT(i32* %12, i32 0)
  %14 = trunc i64 %13 to i32
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SWITCH_OP, i32 0, i32 0), align 4
  %16 = add nsw i32 %14, %15
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SWITCH_OP, i32 0, i32 1), align 4
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SWITCH_OP, i32 0, i32 2), align 4
  %19 = add nsw i32 %17, %18
  store i32 %19, i32* %11, align 4
  %20 = load i8*, i8** %7, align 8
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %11, align 4
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @snprintf(i8* %20, i32 %21, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %22, i32 %23)
  %25 = load i32, i32* %5, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @update_switch_op(i32 %25, i32* %26)
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @update_bytes_consumed(i32 %28)
  ret i32 %29
}

declare dso_local i64 @UINT(i32*, i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32, i32) #1

declare dso_local i32 @update_switch_op(i32, i32*) #1

declare dso_local i32 @update_bytes_consumed(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
